@@ -3,9 +3,10 @@ package com.swe.backend.Service;
 import com.swe.backend.DTOs.SlimUserDto;
 import com.swe.backend.DTOs.UserDto;
 import com.swe.backend.DTOs.UserRegistrationDto;
+import com.swe.backend.Entity.Role;
 import com.swe.backend.Mappers.UserMapper;
 import com.swe.backend.Repository.RoleRepository;
-import org.springframework.http.ResponseEntity;
+import org.mapstruct.factory.Mappers;
 import org.springframework.stereotype.Service;
 
 import com.swe.backend.Entity.User;
@@ -13,41 +14,69 @@ import com.swe.backend.Exceptions.UserIdNotFoundException;
 import com.swe.backend.Repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class UserService {
 
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
+    private final UserMapper userMapper;
 
-    public UserService(UserRepository userRepository, RoleRepository roleRepository,
-                       UserMapper userMapper) {
+    public UserService(UserRepository userRepository, RoleRepository roleRepository, UserMapper userMapper) {
         this.userRepository = userRepository;
+        this.roleRepository = roleRepository;
+        this.userMapper = userMapper;
     }
 
     public UserDto registerNewUser(UserRegistrationDto dto) {
         if (userRepository.existsByUsername(dto.getUsername())) {
             throw new IllegalArgumentException("Username already taken.");
         }
-        User user = UserMapper.toUser(dto);
-        if (user == null)  { throw new RuntimeException(dto.getUsername() + " could not be added not exist."); }
-            return UserMapper.toUserDto(userRepository.save(user));
+        User user = userMapper.toUser(dto);
+
+        Role defaultRole = roleRepository.findByRoleName("CUSTOMER")
+                .orElseThrow(() -> new IllegalStateException("Default role not found"));
+        user.setRole(defaultRole);
+
+        return userMapper.toUserDto(userRepository.save(user));
     }
 
-    public ResponseEntity<UserDto> getUserByID(Long id) {
-        User user =  userRepository.findById(id)
-                .orElse(null);
-        if (user == null) { throw new UserIdNotFoundException(id); }
-        return ResponseEntity.ok(UserMapper.toUserDto(user));
+    public Optional<UserDto> getUserById(Long id) {
+        return userRepository.findById(id)
+                .map(userMapper::toUserDto);
     }
 
-    public ResponseEntity<List<UserDto>> getUsers() {
-        List<User> users = userRepository.findAll();
-        return ResponseEntity.ok(users.stream().map(UserMapper::toUserDto).collect(Collectors.toList()));
+    public List<UserDto> getAllUsers() {
+        return userRepository.findAll().stream()
+                .map(userMapper::toUserDto)
+                .toList();
     }
 
-    public ResponseEntity<List<SlimUserDto>> getSlimUsers() {
-        List<SlimUserDto> users = userRepository.findAll().stream().map(UserMapper::toSlimUserDto).toList();
-        return ResponseEntity.ok(users);
+    public List<SlimUserDto> getSlimUsers() {
+        return userRepository.findAll().stream()
+                .map(userMapper::toSlimUserDto)
+                .toList();
+    }
+
+    public boolean deleteUserById(Long id) {
+        if (userRepository.existsById(id)) {
+            userRepository.deleteById(id);
+            return true;
+        }
+        return false;
+    }
+
+    public Optional<UserDto> updateUserRole(Long userId, String roleName) {
+        Optional<User> userOpt = userRepository.findById(userId);
+        Optional<Role> roleOpt = roleRepository.findByRoleName(roleName);
+
+        if (userOpt.isPresent() && roleOpt.isPresent()) {
+            User user = userOpt.get();
+            user.setRole(roleOpt.get());
+            return Optional.of(userMapper.toUserDto(userRepository.save(user)));
+        }
+
+        return Optional.empty();
     }
 }
